# ServiceDefinitions

./: BUILD  MODULE.bazel  README.md
proto/axesservice/axesservice/rotational/v1/: rotational_axesservice.proto
proto/axesservice/linear/v2/: BUILD  README.md  linear_axesservice.proto
proto/axesservice/rotational/v1/: BUILD  README.md  rotational_axesservice.proto
proto/cameraservice/: BUILD  README.md  cameraservice.proto
proto/distancesensorservice/v1/: distancesensorservice.proto
proto/linescanservice/v1/: BUILD  README.md  grpc_test.py  linescanservice.proto
proto/scannerservice/: BUILD  grpc_test_hardwarecontroller.py  scannerservice.proto
proto/stateswitchservice/: BUILD  README.md  stateswitchservice.proto
proto/videoservice/: BUILD  videoservice.proto
