module(
    name = "servicedefinitions",
    version = "0.0.1",
)
bazel_dep(name = "protobuf", version = "27.2")
bazel_dep(name = "ovf", version = "1.7.0")

git_override(
    module_name = "ovf",
    remote = "https://github.com/Digital-Production-Aachen/OpenVectorFormat.git",
    commit = "d624ed6",
)
